--- a/DSC/DSC.csproj
+++ b/DSC/DSC.csproj
@@ -59,6 +59,9 @@
     <Compile Include="gtk-gui\MainWindow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CalcModel.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="Calculator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
