Adding a representation for the number input by the user.

--- a/DSC/DSC.csproj
+++ b/DSC/DSC.csproj
@@ -62,6 +62,7 @@
     <Compile Include="CalcModel.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="Calculator.cs" />
+    <Compile Include="InputNumber.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
