--- a/DSCTest/DSCTest.csproj
+++ b/DSCTest/DSCTest.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalcModelTest.cs" />
+    <Compile Include="InputNumberTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
