Adding test of the whole calculator program, and fixes issues with displaying just 0 and chaining operations.

--- a/DSCTest/DSCTest.csproj
+++ b/DSCTest/DSCTest.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MultiplyOperatorTest.cs" />
     <Compile Include="DivideOperatorTest.cs" />
     <Compile Include="PowerOperatorTest.cs" />
+    <Compile Include="ProgramTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
